extends Control

## –û—Å–Ω–æ–≤–Ω–∞—è –∏–≥—Ä–æ–≤–∞—è —Å—Ü–µ–Ω–∞

@onready var game_area: Control = $GameArea
@onready var lives_label: Label = $UI/LivesLabel
@onready var score_label: Label = $UI/ScoreLabel
@onready var countdown_label: Label = $UI/CountdownLabel
@onready var bomb_message: Label = $UI/BombMessage
@onready var spawn_timer: Timer = $SpawnTimer
@onready var stain_timer: Timer = $StainTimer
@onready var game_over_panel: Control = $UI/GameOverPanel
@onready var game_over_score_label: Label = $UI/GameOverPanel/VBoxContainer/ScoreContainer/ScoreLabel
@onready var watermelon_half_sprite: Sprite2D = $UI/GameOverPanel/VBoxContainer/ScoreContainer/WatermelonHalfSprite
@onready var continue_button: Button = $UI/GameOverPanel/VBoxContainer/ContinueButton

# –î–ª—è –æ—Ç—Ä–∏—Å–æ–≤–∫–∏ –ª–∏–Ω–∏–∏ —Ä–∞–∑—Ä–µ–∑–∞
var cut_line_points: Array[Vector2] = []

var game_manager: Node
var is_game_active: bool = false
var touch_path: Array[Vector2] = []
var fruits: Array[RigidBody2D] = []
var stains: Array[Node] = []
var is_dragging: bool = false

var fruit_scene = preload("res://fruit.tscn")
var fruit_half_scene = preload("res://fruit_half.tscn")
var stain_scene = preload("res://stain.tscn")
var main_menu_scene = preload("res://main_menu.tscn")

func _ready() -> void:
	
	if ResourceLoader.exists("res://main_menu.tscn"):
		main_menu_scene = preload("res://main_menu.tscn")
		print("‚úÖ main_menu.tscn –∑–∞–≥—Ä—É–∂–µ–Ω")
	else:
		print("‚ùå main_menu.tscn –ù–ï –ù–ê–ô–î–ï–ù!")
	
	game_manager = get_node("/root/GameManager")
	game_manager.reset_game()
	game_manager.lives_changed.connect(_on_lives_changed)
	game_manager.score_changed.connect(_on_score_changed)
	game_manager.game_over.connect(_on_game_over)
	
	start_countdown()
	
	# –°–∫—Ä—ã–≤–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ –æ –±–æ–º–±–µ
	bomb_message.visible = false
	
	# –°–∫—Ä—ã–≤–∞–µ–º –ø–∞–Ω–µ–ª—å –æ–∫–æ–Ω—á–∞–Ω–∏—è –∏–≥—Ä—ã
	game_over_panel.visible = false
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º –∫–Ω–æ–ø–∫—É –ø—Ä–æ–¥–æ–ª–∂–µ–Ω–∏—è
	continue_button.pressed.connect(_on_continue_pressed)
	
	# –ö—É—Ä—Å–æ—Ä = –Ω–æ–∂ (—Å—Ç–∞–≤–∏–º –ø—Ä–∏ –≤—Ö–æ–¥–µ –≤ –∏–≥—Ä—É)
	_set_knife_cursor()



func start_countdown() -> void:
	countdown_label.visible = true
	await get_tree().create_timer(1.0).timeout
	countdown_label.text = "3"
	countdown_label.modulate.a = 1.0
	
	await get_tree().create_timer(1.0).timeout
	countdown_label.text = "2"
	
	await get_tree().create_timer(1.0).timeout
	countdown_label.text = "1"
	
	await get_tree().create_timer(1.0).timeout
	countdown_label.text = "–ù–ê–ß–ê–õ–ò!"
	
	await get_tree().create_timer(0.5).timeout
	countdown_label.visible = false
	is_game_active = true
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º —Å–ø–∞–≤–Ω —Ñ—Ä—É–∫—Ç–æ–≤ ‚Äî —á–∞—â–µ –∏ –±–æ–ª—å—à–µ
	spawn_timer.wait_time = 0.75
	spawn_timer.timeout.connect(_on_spawn_timer_timeout)
	spawn_timer.start()
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º —Ç–∞–π–º–µ—Ä –¥–ª—è —Å–æ–∑–¥–∞–Ω–∏—è –Ω–æ–≤—ã—Ö –ø—è—Ç–µ–Ω
	stain_timer.wait_time = 0.5
	stain_timer.timeout.connect(_on_stain_timer_timeout)
	stain_timer.start()

func _on_spawn_timer_timeout() -> void:
	if not is_game_active:
		return
	
	# –ó–∞ –æ–¥–∏–Ω —Ä–∞–∑ –ø–æ—è–≤–ª—è–µ—Ç—Å—è –Ω–µ—Å–∫–æ–ª—å–∫–æ —Ñ—Ä—É–∫—Ç–æ–≤
	spawn_fruit()
	spawn_fruit()
	spawn_fruit()

	


func spawn_fruit() -> void:
	var fruit = fruit_scene.instantiate() as RigidBody2D
	var x = randf_range(100, 980)
	
	# 10% —à–∞–Ω—Å –Ω–∞ –±–æ–º–±—É
	if randf() < 0.1:
		fruit.is_bomb = true
	else:
		# –û—Å—Ç–∞–≤–ª—è–µ–º —Ç–æ–ª—å–∫–æ —Ñ—Ä—É–∫—Ç—ã, —É –∫–æ—Ç–æ—Ä—ã—Ö –µ—Å—Ç—å Half-—Ç–µ–∫—Å—Ç—É—Ä—ã
		var fruit_types = ["apple", "banana", "watermelon", "pineapple", "kiwi", "strawberry"]
		fruit.fruit_type = fruit_types[randi() % fruit_types.size()]
	
	fruits.append(fruit)
	game_area.add_child(fruit)
	fruit.global_position = Vector2(x, 1850)

# –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ—Ç —ç–∫—Ä–∞–Ω–Ω—ã–µ –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç—ã –≤ –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç—ã –∫–∞–Ω–≤–∞—Å–∞ (–∫–∞–∫ —É —Ñ—Ä—É–∫—Ç–æ–≤)
func _touch_to_canvas(screen_pos: Vector2) -> Vector2:
	var vp = get_viewport()
	return vp.get_canvas_transform().affine_inverse() * screen_pos

func _set_knife_cursor() -> void:
	# –†–∏—Å—É–µ–º –ø—Ä–æ—Å—Ç–æ–π –Ω–æ–∂ (—Å–≤–µ—Ç–ª–∞—è –ø–æ–ª–æ—Å–∫–∞-–ª–µ–∑–≤–∏–µ) –∫–∞–∫ –∫—É—Ä—Å–æ—Ä
	var size = 48
	var img = Image.create(size, size, false, Image.FORMAT_RGBA8)
	img.fill(Color(0, 0, 0, 0))
	# –õ–µ–∑–≤–∏–µ ‚Äî –¥–∏–∞–≥–æ–Ω–∞–ª—å–Ω–∞—è –ø–æ–ª–æ—Å–∞ –æ—Ç —Ü–µ–Ω—Ç—Ä–∞ –∫ –∫—Ä–∞—é (–∫–æ–Ω—á–∏–∫ –Ω–æ–∂–∞ –≤–Ω–∏–∑—É-—Å–ø—Ä–∞–≤–∞)
	var tip = Vector2(size - 2, size - 2)
	var base = Vector2(4, 4)
	for x in range(size):
		for y in range(size):
			var p = Vector2(x, y)
			var d = _point_to_segment_distance(p, base, tip)
			if d <= 3.0:
				var a = 1.0 - d / 3.0
				img.set_pixel(x, y, Color(1.0, 1.0, 1.0, a * 0.95))
			elif d <= 5.0:
				var a = (1.0 - (d - 3.0) / 2.0) * 0.5
				img.set_pixel(x, y, Color(0.7, 0.85, 1.0, a))
	# –ö–æ–Ω—á–∏–∫ –Ω–æ–∂–∞ ‚Äî —Ç–æ—á–∫–∞, –ø–æ –∫–æ—Ç–æ—Ä–æ–π —Ä–µ–∂–µ–º (hotspot)
	Input.set_custom_mouse_cursor(img, Input.CURSOR_ARROW, Vector2(size - 4, size - 4))

func _point_to_segment_distance(p: Vector2, a: Vector2, b: Vector2) -> float:
	var ab = b - a
	var ap = p - a
	var t = clampf(ap.dot(ab) / ab.length_squared(), 0.0, 1.0)
	var proj = a + t * ab
	return p.distance_to(proj)

func _continue_button_hit(screen_pos: Vector2) -> bool:
	# –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ–º —ç–∫—Ä–∞–Ω–Ω—ã–µ –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç—ã –≤ –ª–æ–∫–∞–ª—å–Ω—ã–µ –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç—ã –∫–Ω–æ–ø–∫–∏
	var canvas_pos = _touch_to_canvas(screen_pos)
	# –ü–æ–ª—É—á–∞–µ–º –≥–ª–æ–±–∞–ª—å–Ω—É—é –ø–æ–∑–∏—Ü–∏—é –∏ —Ä–∞–∑–º–µ—Ä –∫–Ω–æ–ø–∫–∏
	var button_rect = Rect2(continue_button.global_position, continue_button.size)
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–æ–ø–∞–¥–∞–Ω–∏–µ —Å –Ω–µ–±–æ–ª—å—à–∏–º –∑–∞–ø–∞—Å–æ–º –¥–ª—è —É–¥–æ–±—Å—Ç–≤–∞ –Ω–∞–∂–∞—Ç–∏—è
	return button_rect.grow(10.0).has_point(canvas_pos)

func _input(event: InputEvent) -> void:
	# –ï—Å–ª–∏ –ø–æ–∫–∞–∑–∞–Ω –±–∞–Ω–Ω–µ—Ä Game Over ‚Äî –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º —Ç–æ–ª—å–∫–æ –∫–Ω–æ–ø–∫—É "–ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å"
	# Game Over ‚Äî —Ç–æ–ª—å–∫–æ –∫–Ω–æ–ø–∫–∞ "–ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å"
	if game_over_panel.visible:
		if (event is InputEventMouseButton or event is InputEventScreenTouch) and event.pressed:
			var pos = event.position
			if _continue_button_hit(pos):
				_on_continue_pressed()
				if get_viewport():  # ‚úÖ –ë–µ–∑–æ–ø–∞—Å–Ω–∞—è –ø—Ä–æ–≤–µ—Ä–∫–∞
					get_viewport().set_input_as_handled()
				return
		return
	
	if not is_game_active:
		return
	
	# –ú—ã—à—å = –Ω–æ–∂: –≤–µ–¥—ë–º –ª–∏–Ω–∏—é —Ä–∞–∑—Ä–µ–∑–∞ –∏ —Ä–µ–∂–µ–º —Ñ—Ä—É–∫—Ç—ã
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_LEFT:
			var canvas_pos = _touch_to_canvas(event.position)
			if event.pressed:
				touch_path.clear()
				cut_line_points.clear()
				touch_path.append(canvas_pos)
				cut_line_points.append(canvas_pos)
				is_dragging = true
				queue_redraw()
			else:
				if touch_path.size() > 1:
					check_cuts()
				touch_path.clear()
				cut_line_points.clear()
				is_dragging = false
				queue_redraw()
	
	if event is InputEventMouseMotion and event.button_mask & MOUSE_BUTTON_MASK_LEFT:
		var canvas_pos = _touch_to_canvas(event.position)
		touch_path.append(canvas_pos)
		cut_line_points = touch_path.duplicate()
		queue_redraw()
		check_cuts_continuous()
	
	# –°–µ–Ω—Å–æ—Ä (–ø–∞–ª–µ—Ü)
	if event is InputEventScreenTouch:
		if event.pressed:
			touch_path.clear()
			cut_line_points.clear()
			var canvas_pos = _touch_to_canvas(event.position)
			touch_path.append(canvas_pos)
			cut_line_points.append(canvas_pos)
			is_dragging = true
			queue_redraw()
		else:
			if touch_path.size() > 1:
				check_cuts()
			touch_path.clear()
			cut_line_points.clear()
			is_dragging = false
			queue_redraw()
	
	if event is InputEventScreenDrag:
		if is_dragging:
			var canvas_pos = _touch_to_canvas(event.position)
			touch_path.append(canvas_pos)
			cut_line_points = touch_path.duplicate()
			queue_redraw()
			check_cuts_continuous()

func _draw() -> void:
	# –ù–æ–∂ ‚Äî –≤–∏–¥–∏–º—ã–π —Å–ª–µ–¥ –ø—Ä–∏ —Å–≤–∞–π–ø–µ (—Ç–æ–ª—å–∫–æ –µ—Å–ª–∏ –∏–≥—Ä–∞ –∞–∫—Ç–∏–≤–Ω–∞ –∏ –Ω–µ—Ç game over)
	if not is_game_active or game_over_panel.visible:
		return
	
	if cut_line_points.size() >= 2:
		for i in range(cut_line_points.size() - 1):
			var start = cut_line_points[i]
			var end = cut_line_points[i + 1]
			# –¢–æ–ª—Å—Ç–∞—è —Å–≤–µ—Ç–ª–∞—è –ø–æ–ª–æ—Å–∞ ‚Äî –ª–µ–∑–≤–∏–µ –Ω–æ–∂–∞
			draw_line(start, end, Color(0.9, 0.95, 1.0, 0.95), 8.0)
			draw_line(start, end, Color(0.6, 0.85, 1.0, 0.9), 5.0)
			draw_line(start, end, Color(1.0, 1.0, 1.0, 0.8), 2.0)

func check_cuts() -> void:
	if touch_path.size() < 2:
		return
	
	check_cuts_continuous()

func check_cuts_continuous() -> void:
	if touch_path.size() < 2:
		return
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–µ—Ä–µ—Å–µ—á–µ–Ω–∏–µ –ª–∏–Ω–∏–∏ —Å —Ñ—Ä—É–∫—Ç–∞–º–∏
	var cut_fruits: Array[RigidBody2D] = []
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –≤—Å–µ —Å–µ–≥–º–µ–Ω—Ç—ã –ª–∏–Ω–∏–∏ —Å–≤–∞–π–ø–∞ (–Ω–æ–∂ –∫–∞—Å–∞–µ—Ç—Å—è —Ñ—Ä—É–∫—Ç–∞)
	for i in range(touch_path.size() - 1):
		var start = touch_path[i]
		var end = touch_path[i + 1]
		
		for fruit in fruits.duplicate():
			if fruit == null or not is_instance_valid(fruit) or fruit in cut_fruits:
				continue
			
			var fruit_pos = fruit.global_position
			var distance = point_to_line_distance(fruit_pos, start, end)
			# –†–∞–¥–∏—É—Å –ø–æ–ø–∞–¥–∞–Ω–∏—è –Ω–æ–∂–∞ –ø–æ —Ñ—Ä—É–∫—Ç—É (–º–∞–ª–µ–Ω—å–∫–∏–µ —Ñ—Ä—É–∫—Ç—ã, –¥–æ—Å—Ç–∞—Ç–æ—á–Ω—ã–π —Ä–∞–¥–∏—É—Å)
			var hit_radius = 55.0
			if distance < hit_radius:
				cut_fruits.append(fruit)
				cut_fruit(fruit, fruit_pos)
				break

func point_to_line_distance(point: Vector2, line_start: Vector2, line_end: Vector2) -> float:
	var line = line_end - line_start
	var line_length = line.length()
	if line_length == 0:
		return point.distance_to(line_start)
	
	var t = max(0, min(1, (point - line_start).dot(line) / (line_length * line_length)))
	var projection = line_start + t * line
	return point.distance_to(projection)

func cut_fruit(fruit: RigidBody2D, cut_position: Vector2) -> void:
	if not is_instance_valid(fruit):
		return
	
	if fruit.is_bomb:
		handle_bomb_cut()
		fruit.queue_free()
		fruits.erase(fruit)
		return
	
	# –°–æ–∑–¥–∞–µ–º –¥–≤–µ –ø–æ–ª–æ–≤–∏–Ω–∫–∏
	create_fruit_halves(fruit, cut_position)
	
	# –°–æ–∑–¥–∞–µ–º –ø—è—Ç–Ω–æ
	create_stain(cut_position)
	
	# –î–æ–±–∞–≤–ª—è–µ–º –æ—á–∫–∏
	game_manager.add_score(10)
	
	# –£–¥–∞–ª—è–µ–º —Ñ—Ä—É–∫—Ç
	fruit.queue_free()
	fruits.erase(fruit)

func create_fruit_halves(fruit: RigidBody2D, position: Vector2) -> void:
	# –†–∞–∑–¥–≤–∏–≥–∞–µ–º –ø–æ–ª–æ–≤–∏–Ω–∫–∏ —à–∏—Ä–µ –ø–æ –≥–æ—Ä–∏–∑–æ–Ω—Ç–∞–ª–∏
	var spread = 55.0
	# –õ–µ–≤–∞—è –ø–æ–ª–æ–≤–∏–Ω–∞ ‚Äî —É—Ö–æ–¥–∏—Ç –≤–ª–µ–≤–æ –∏ –≤–Ω–∏–∑
	var half1 = fruit_half_scene.instantiate()
	half1.global_position = position + Vector2(-spread, 0)
	half1.fruit_type = fruit.fruit_type
	half1.is_left_half = true
	game_area.add_child(half1)
	
	# –ü—Ä–∞–≤–∞—è –ø–æ–ª–æ–≤–∏–Ω–∞ ‚Äî —É—Ö–æ–¥–∏—Ç –≤–ø—Ä–∞–≤–æ –∏ –≤–Ω–∏–∑
	var half2 = fruit_half_scene.instantiate()
	half2.global_position = position + Vector2(spread, 0)
	half2.fruit_type = fruit.fruit_type
	half2.is_left_half = false
	game_area.add_child(half2)
	
	# –°–æ–∑–¥–∞–µ–º –±—Ä—ã–∑–≥–∏ (—á–∞—Å—Ç–∏—Ü—ã)
	create_splatter(position, fruit.fruit_type)

func create_stain(position: Vector2) -> void:
	var stain = stain_scene.instantiate()
	stain.global_position = position
	game_area.add_child(stain)
	stains.append(stain)

func create_splatter(position: Vector2, fruit_type: String) -> void:
	# –°–æ–∑–¥–∞–µ–º –Ω–µ—Å–∫–æ–ª—å–∫–æ –±—Ä—ã–∑–≥ –≤–æ–∫—Ä—É–≥ –º–µ—Å—Ç–∞ —Ä–∞–∑—Ä–µ–∑–∞
	for i in range(8):
		var splatter = stain_scene.instantiate()
		var angle = (PI * 2 / 8) * i
		var distance = randf_range(20, 60)
		splatter.global_position = position + Vector2(cos(angle), sin(angle)) * distance
		
		# –¶–≤–µ—Ç –±—Ä—ã–∑–≥ –∑–∞–≤–∏—Å–∏—Ç –æ—Ç —Ç–∏–ø–∞ —Ñ—Ä—É–∫—Ç–∞
		var color = Color(1.0, 0.2, 0.2, 0.6)  # –ö—Ä–∞—Å–Ω—ã–π –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
		match fruit_type:
			"banana":
				color = Color(1.0, 0.9, 0.2, 0.6)  # –ñ–µ–ª—Ç—ã–π
			"watermelon":
				color = Color(1.0, 0.3, 0.3, 0.6)  # –ö—Ä–∞—Å–Ω—ã–π
			"orange", "peach":
				color = Color(1.0, 0.6, 0.2, 0.6)  # –û—Ä–∞–Ω–∂–µ–≤—ã–π
			"grape":
				color = Color(0.6, 0.2, 0.8, 0.6)  # –§–∏–æ–ª–µ—Ç–æ–≤—ã–π
			"kiwi":
				color = Color(0.6, 0.9, 0.3, 0.6)  # –ó–µ–ª–µ–Ω—ã–π
			"cherry", "strawberry":
				color = Color(1.0, 0.1, 0.1, 0.6)  # –ö—Ä–∞—Å–Ω—ã–π
		
		splatter.modulate = color
		game_area.add_child(splatter)

func _on_stain_timer_timeout() -> void:
	# –ü–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–∏ —Å–æ–∑–¥–∞–µ–º –Ω–æ–≤—ã–µ –ø—è—Ç–Ω–∞ –≤ —Å–ª—É—á–∞–π–Ω—ã—Ö –º–µ—Å—Ç–∞—Ö –Ω–∞ —ç–∫—Ä–∞–Ω–µ
	if randf() < 0.2 and is_game_active:
		var x = randf_range(100, 980)
		var y = randf_range(200, 1700)
		create_stain(Vector2(x, y))

func handle_bomb_cut() -> void:
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ
	bomb_message.text = "–£–ø—Å, –≤—ã —Ä–∞–∑—Ä–µ–∑–∞–ª–∏ –±–æ–º–±—É!"
	bomb_message.visible = true
	
	# –£–±–∏—Ä–∞–µ–º —Å–æ–æ–±—â–µ–Ω–∏–µ —á–µ—Ä–µ–∑ 2 —Å–µ–∫—É–Ω–¥—ã
	await get_tree().create_timer(2.0).timeout
	bomb_message.visible = false
	
	# –û—Ç–Ω–∏–º–∞–µ–º –∂–∏–∑–Ω—å
	game_manager.lose_life()

func _on_lives_changed(new_lives: int) -> void:
	lives_label.text = "–ñ–∏–∑–Ω–∏: " + str(new_lives)

func _on_score_changed(new_score: int) -> void:
	score_label.text = "–û—á–∫–∏: " + str(new_score)

func _on_game_over() -> void:
	is_game_active = false
	spawn_timer.stop()
	stain_timer.stop()
	
	# –û—á–∏—â–∞–µ–º —Å–ª–µ–¥ –Ω–æ–∂–∞
	touch_path.clear()
	cut_line_points.clear()
	is_dragging = false
	queue_redraw()
	
	# –£–±–∏—Ä–∞–µ–º –∫—É—Ä—Å–æ—Ä-–Ω–æ–∂ (–≤–æ–∑–≤—Ä–∞—â–∞–µ–º —Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–π)
	Input.set_custom_mouse_cursor(null)
	
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –∫—Ä–∞—Å–∏–≤—ã–π –±–∞–Ω–Ω–µ—Ä —Å –æ—á–∫–∞–º–∏ –∏ –ø–æ–ª–æ–≤–∏–Ω–∫–æ–π –∞—Ä–±—É–∑–∞
	show_game_over_banner()

func show_game_over_banner() -> void:
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –æ—á–∫–∏ –Ω–∞ –±–∞–Ω–Ω–µ—Ä–µ
	game_over_score_label.text = str(game_manager.score)
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º –ø–æ–ª–æ–≤–∏–Ω–∫—É –∞—Ä–±—É–∑–∞ (–º–∞–ª–µ–Ω—å–∫–∞—è, —Ä—è–¥–æ–º —Å –æ—á–∫–∞–º–∏)
	var watermelon_half_texture = load("res://assets/sprites/watermelonHalf.png")
	if watermelon_half_texture:
		watermelon_half_sprite.texture = watermelon_half_texture
		# –ú–∞—Å—à—Ç–∞–± —É–∂–µ –∑–∞–¥–∞–Ω –≤ —Å—Ü–µ–Ω–µ (0.4), –º–æ–∂–Ω–æ –Ω–µ –º–µ–Ω—è—Ç—å
	
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –ø–∞–Ω–µ–ª—å —Å –ø–ª–∞–≤–Ω–æ–π –∞–Ω–∏–º–∞—Ü–∏–µ–π –ø–æ—è–≤–ª–µ–Ω–∏—è
	game_over_panel.visible = true
	game_over_panel.modulate.a = 0.0
	
	# –£–±–µ–∂–¥–∞–µ–º—Å—è, —á—Ç–æ –∫–Ω–æ–ø–∫–∞ –º–æ–∂–µ—Ç –ø–æ–ª—É—á–∞—Ç—å —Å–æ–±—ã—Ç–∏—è
	continue_button.disabled = false
	continue_button.visible = true
	
	# –ü–ª–∞–≤–Ω–æ–µ –ø–æ—è–≤–ª–µ–Ω–∏–µ –±–∞–Ω–Ω–µ—Ä–∞
	var tween = create_tween()
	tween.tween_property(game_over_panel, "modulate:a", 1.0, 0.6)
	
func clear_game_objects() -> void:
	for fruit in fruits:
		if is_instance_valid(fruit):
			fruit.queue_free()
	fruits.clear()
	
	for stain in stains:
		if is_instance_valid(stain):
			stain.queue_free()
	stains.clear()
	
	touch_path.clear()
	cut_line_points.clear()
	is_dragging = false
	queue_redraw()

func _on_continue_pressed() -> void:
	print("üîÑ –ü–µ—Ä–µ—Ö–æ–¥ –Ω–∞ –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é...")
	
	# –ü–æ–ª–Ω–∞—è –æ—á–∏—Å—Ç–∫–∞ —Å–æ—Å—Ç–æ—è–Ω–∏—è
	is_game_active = false
	spawn_timer.stop()
	stain_timer.stop()
	
	# –û—á–∏—â–∞–µ–º –≤—Å–µ –æ–±—ä–µ–∫—Ç—ã
	clear_game_objects()
	
	# –°–∫—Ä—ã–≤–∞–µ–º UI
	game_over_panel.visible = false
	bomb_message.visible = false
	
	# –ü–ï–†–ï–•–û–î –ù–ê –ú–ï–ù–Æ (2 –≤–∞—Ä–∏–∞–Ω—Ç–∞)
	get_tree().change_scene_to_file("res://main_menu.tscn")
	# –ò–õ–ò –µ—Å–ª–∏ —É —Ç–µ–±—è PackedScene:
	# get_tree().change_scene_to_packed(main_menu_scene)

	
